--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,8 +11,17 @@
       <tr>
         <td><%= attachment_image_tag user, :profile_image,size: "50x50", fallback: "no-image-icon.jpg" %></td>
         <td><%= user.name %></td>
+        <td>フォロー数: <%= user.followings.count %></td>
+        <td>フォロワー数: <%= user.followers.count %></td>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
-      </tr>
+        <% unless current_user == user %>
+         <% if current_user.following?(user) %>
+           <td><%= link_to "フォロー外す","/users/#{user.id}/relationships/#{user.id}", method: :delete %></td>
+         <% else %>
+           <td><%= link_to "フォロー", user_relationships_path(user.id), method: :POST %></td>
+         <% end %>
+        <% end %>
+        </tr>
     <% end %>
   </tbody>
 </table>
