--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,14 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+      <th>フォロー数</th>
+      <th><%= link_to user.followings.count,user_followings_path(@user) %></th>
+  </tr>
+  <tr>
+      <th>フォロワー数</th>
+      <th><%= link_to user.followers.count, user_followers_path(@user) %></th>
+  </tr>
 </table>
 
 <div class='row'>
