--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,16 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
+      <div>
       <%= render 'info', user: @user %>
+      <% unless current_user == @user %>
+      <% if current_user.following?(@user) %>
+      <%= link_to 'フォロー外す', user_relationship_path(@user.id),class: 'btn btn-success', method: :delete %>
+      <% else %>
+      <%= link_to "フォロー", user_relationships_path(@user.id),class: 'btn btn-success', method: :POST %>
+      <% end %>
+      <% end %>
+      </div>
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
